GNOME Bugzilla – Bug 733174
Missing documentation for GtkSpinButton::change-value and ::value-changed
Last modified: 2014-07-19 22:35:18 UTC
The mentioned signals lack documentation. I made up some basic stuff, although I’m not sure its wording is OK in its current form.
no patch ?
Created attachment 280918 [details] [review] The beforementioned documentation Sorry, I got used to my mail clients that alert me if I forgot to add the attachment if the word “attach” is in the body…